Update 'backend-tests-go-qyjrnuca' component image to: quay.io/rhtap_qe/backend-tests-go-qyjrnuca:0da325d80b2deed66bda2e85866be06fcbbb28c3@sha256:5b2a441383c8ee6cd94ec1ec17580187725c8a759349f396dfc93b288418b317

--- a/components/backend-tests-go-qyjrnuca/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-qyjrnuca/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-qyjrnuca
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-qyjrnuca:0da325d80b2deed66bda2e85866be06fcbbb28c3@sha256:5b2a441383c8ee6cd94ec1ec17580187725c8a759349f396dfc93b288418b317
+          name: container-image
